--- a/public/recipes/bacteria/ampicillin/index.html
+++ b/public/recipes/bacteria/ampicillin/index.html
@@ -16,6 +16,9 @@
         <li class="nav"><a href="/Laboratory/">Home</a></li>
         <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
         <li class="nav"><a href="/Laboratory/recipes">Recipes</a></li>
+        <li class="nav"><a href="/Laboratory/terms_of_use">Terms of Use</a></li>
+        <li class="nav"><a href="/Laboratory/privacy_policy">Privicy Policy</a></li>
+        <li class="nav"><a href="/Laboratory/legal_notice">Legal Notice</a></li>
     </ul>
 </nav>
 
@@ -122,7 +125,7 @@
           <td style="text-align: left"> usually 100 mg/L </td>
       </tr>
       <tr>
-          <td style="text-align: left"> <a href="/Laboratory/recipes/bacteria/lb-agar/">LB-agar</a></td>
+          <td style="text-align: left"> <a href="/Laboratory/recipes/bacteria/lb-agar/">Luria-Bertani Agarose Medium</a></td>
           <td style="text-align: left"> usually 100 mg/L </td>
       </tr>
   </tbody>
