--- a/public/recipes/bacteria/ampicillin/index.html
+++ b/public/recipes/bacteria/ampicillin/index.html
@@ -14,8 +14,9 @@
     <a href="/Laboratory/"><img class="nav" src="/Laboratory/images/3biochem_white.png" alt="Logo"></a>
     <ul class="nav">
         <li class="nav"><a href="/Laboratory/">Home</a></li>
-        <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
+        <li class="nav"><a href="/Laboratory/materials">Materials</a></li>
         <li class="nav"><a href="/Laboratory/recipes">Recipes</a></li>
+        <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
         <li class="nav"><a href="/Laboratory/templates">Templates</a></li>
     </ul>
 </nav>
@@ -163,7 +164,7 @@
 
         <div style="text-align: right;">
         <br>
-        05.09.2025 Version 1.0
+        05.09.2025 Version 1.0.0
         </div>
     
 
