new feature: access control

--- a/public/methodes/bacteria/transtormation_from_pcr/index.html
+++ b/public/methodes/bacteria/transtormation_from_pcr/index.html
@@ -14,6 +14,8 @@
 <script src="/Laboratory/js/age_following_pcr_buffer.js"></script>
 <script src="/Laboratory/js/transformation_from_pcr_mastermix_prep_calc.js"></script>
 
+<script src="/Laboratory/js/access.js"></script>
+
 <body>
 
     <nav class="nav">
@@ -23,7 +25,6 @@
         <li class="nav"><a href="/Laboratory/materials">Materials</a></li>
         <li class="nav"><a href="/Laboratory/recipes">Recipes</a></li>
         <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
-        <li class="nav"><a href="/Laboratory/templates">Templates</a></li>
     </ul>
 </nav>
 
@@ -290,7 +291,7 @@
           <td style="text-align: left"><input type="checkbox"></td>
           <td style="text-align: left"><span  id="enzyme-vol" class="t_from_pcr_mm" data-base="1">1</span> µL</td>
           <td style="text-align: left">restriction enzyme(s) of choice</td>
-          <td style="text-align: left">Enzyme amount: <select id="ligation-enzyme-amount" style="width:80px;"><option value="1">1×</option><option value="2">2×</select></td>
+          <td style="text-align: left">Number of enzymes: <select id="ligation-enzyme-amount" style="width:80px;"><option value="1">1×</option><option value="2">2×</select></td>
           <td style="text-align: left"></td>
       </tr>
       <tr>
