--- a/public/methodes/dna/age/index.html
+++ b/public/methodes/dna/age/index.html
@@ -14,6 +14,8 @@
 <script src="/Laboratory/js/age_following_pcr_buffer.js"></script>
 <script src="/Laboratory/js/transformation_from_pcr_mastermix_prep_calc.js"></script>
 
+<script src="/Laboratory/js/access.js"></script>
+
 <body>
 
     <nav class="nav">
@@ -23,7 +25,6 @@
         <li class="nav"><a href="/Laboratory/materials">Materials</a></li>
         <li class="nav"><a href="/Laboratory/recipes">Recipes</a></li>
         <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
-        <li class="nav"><a href="/Laboratory/templates">Templates</a></li>
     </ul>
 </nav>
 
