new feature: comment box

--- a/public/methodes/dna/age/index.html
+++ b/public/methodes/dna/age/index.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head><script src="/BiochemProtocols/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=BiochemProtocols/livereload" data-no-instant defer></script>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/BiochemProtocols/css/styles.css">
@@ -19,8 +19,13 @@
 <script src="/BiochemProtocols/js/primer_alternative.js"></script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+<script src="/BiochemProtocols/js/comment_box.js"></script>
+
+<script src="/BiochemProtocols/js/save_page.js"></script>
+
+
 <script src="/BiochemProtocols/js/bacterial_growth_calc.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script> 
 
 <script src="/BiochemProtocols/js/access.js"></script>
 
@@ -494,6 +499,20 @@ default 12-well comb well volume: TBD</p>
 </ul>
 
 </div>
+<div class="local-comment" data-comment-id="/BiochemProtocols/methodes/dna/age/">
+
+  <label><strong>Personal Comments</strong></label><br>
+
+  <textarea rows="4" style="width:100%;"></textarea>
+
+  <div style="margin-top:0.5rem; display:flex; align-items:center; gap:8px;">
+    <button class="lock" title="Toggle lock">🔓</button>
+    <button class="save">Save</button>
+    <span class="status"></span>
+    <button class="delete" style="display:none;">Delete</button>
+  </div>
+</div>
+
 
         <div style="text-align: right;">
         <br>
