--- a/public/methodes/dna/nucleospin_plasmid_prep/index.html
+++ b/public/methodes/dna/nucleospin_plasmid_prep/index.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head><script src="/BiochemProtocols/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=BiochemProtocols/livereload" data-no-instant defer></script>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/BiochemProtocols/css/styles.css">
@@ -19,8 +19,13 @@
 <script src="/BiochemProtocols/js/primer_alternative.js"></script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+<script src="/BiochemProtocols/js/comment_box.js"></script>
+
+<script src="/BiochemProtocols/js/save_page.js"></script>
+
+
 <script src="/BiochemProtocols/js/bacterial_growth_calc.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script> 
 
 <script src="/BiochemProtocols/js/access.js"></script>
 
@@ -188,10 +193,17 @@
 <h3 id="preparations">Preparations:</h3>
 <ol>
 <li><input type="checkbox"> <a href="/BiochemProtocols/methodes/bacteria/plasmid_prep_culture/">Prepare a 5 mL culture of transformed bacteria and grow them until an OD<sub>600</sub> ~ 0.4–0.8 (best 0.6) is reached.</a></li>
-<li><input type="checkbox"> Pre-heat a heating block to 70 °C.</li>
-<li><input type="checkbox"> Pre-heat 60 µL of buffer AE (elution buffer) to 70 °C.</li>
+<li><input type="checkbox"> Optionally, pre-heat a heating block to 70 °C.</li>
+<li><input type="checkbox"> Optionally, pre-heat 60 µL of buffer AE (elution buffer) per sapmle to 70 °C.</li>
 </ol>
 <h3 id="harvest">Harvest:</h3>
+<ol>
+<li><input type="checkbox"> Pellet bacteria @ 5,000 g for 10 minutes.</li>
+</ol>
+<div class="countdown-wrapper" data-time="0:10:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:10:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
+<div class="infobox info">
+  <strong>Microfuge</strong>
+  <div><p>⚠️ If no device for centrifuging 15 mL tubes at high enaugh force is available, a microfuge with multiple cycles can be used:</p>
 <ol>
 <li><input type="checkbox"> Transfer 1000 µL of the culture into a sterile 1.5 mL reaction tube.</li>
 <li><input type="checkbox"> Pellet bacteria @ 11,000 g for 30 seconds.</li>
@@ -220,10 +232,11 @@
 <li><input type="checkbox"> Transfer 1000 µL of the culture into a the same 1.5 mL reaction tube.</li>
 <li><input type="checkbox"> Pellet bacteria @ 11,000 g for 30 seconds.</li>
 </ol>
-<div class="countdown-wrapper" data-time="0:00:30" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:00:30</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
+<div class="countdown-wrapper" data-time="0:00:30" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:00:30</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div></div>
+</div>
 <ol start="15">
 <li><input type="checkbox"> Discard supernatant.</li>
-<li><input type="checkbox"> Remove all access medium with a 100 µL pipette.</li>
+<li><input type="checkbox"> Remove all access medium with a pipette.</li>
 </ol>
 <h3 id="cell-lysis">Cell Lysis:</h3>
 <ol>
@@ -242,7 +255,8 @@
 <div class="countdown-wrapper" data-time="0:10:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:10:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
 <h3 id="loading-the-column">Loading the Column:</h3>
 <ol>
-<li><input type="checkbox"> Place a NucleoSpin Column onto a 2 mL collection tube.</li>
+<li><input type="checkbox"> Place a NucleoSpin Column onto a 2 mL collection tube per sample.</li>
+<li><input type="checkbox"> Provide and lable a 1.5 mL reaction tube per sample.</li>
 <li><input type="checkbox"> Add the supernatant (up to 700 µL) onto the column membrane.</li>
 <li><input type="checkbox"> Centrifuge @ 11,000 g for 60 seconds.</li>
 </ol>
@@ -266,13 +280,13 @@
 <div class="countdown-wrapper" data-time="0:02:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:02:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
 <ol start="12">
 <li><input type="checkbox"> Discard the collection tube and place the collum onto a fresh 1.5 mL reaction tube.</li>
-<li><input type="checkbox"> Optionally incubate the column @ 70 °C for 2 minutes to remove all residual ethanole.</li>
+<li><input type="checkbox"> Optionally, incubate the column @ 70 °C for 2 minutes to remove all residual ethanole.</li>
 </ol>
 <div class="countdown-wrapper" data-time="0:02:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:02:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
 <h3 id="eluting-the-dna">Eluting the DNA:</h3>
 <ol>
 <li><input type="checkbox"> Add 25µL of pre-heated buffer AE (elution buffer) to the column membrane.</li>
-<li><input type="checkbox"> Close the lid and incubate for 5 minutes @ RT.</li>
+<li><input type="checkbox"> Close the lid and incubate @ RT for 5 minutes.</li>
 </ol>
 <div class="infobox info">
   <strong></strong>
@@ -280,7 +294,24 @@
 </div>
 <div class="countdown-wrapper" data-time="0:05:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:05:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
 <ol start="3">
-<li><input type="checkbox"> Centrifuge @ 50 g (or the lowest force possible) for 60 seconds.</li>
+<li><input type="checkbox"> Optionally, Centrifuge @ 50 g (or the lowest force possible) for 60 seconds.</li>
+</ol>
+<div class="countdown-wrapper" data-time="0:01:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:01:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
+<ol start="4">
+<li><input type="checkbox"> Centrifuge @ 11,000 g for 60 seconds.</li>
+</ol>
+<div class="countdown-wrapper" data-time="0:01:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:01:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
+<ol>
+<li><input type="checkbox"> Add 25µL of pre-heated buffer AE (elution buffer) to the column membrane.</li>
+<li><input type="checkbox"> Close the lid and incubate @ RT for 5 minutes.</li>
+</ol>
+<div class="infobox info">
+  <strong></strong>
+  <div>⚠️ Optionally, incubate at 70 °C for 5 minutes instead. Note that this may reduce the final volume but can increase the concentration and overall DNA yield.</div>
+</div>
+<div class="countdown-wrapper" data-time="0:05:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:05:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
+<ol start="3">
+<li><input type="checkbox"> Optionally, Centrifuge @ 50 g (or the lowest force possible) for 60 seconds.</li>
 </ol>
 <div class="countdown-wrapper" data-time="0:01:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:01:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
 <ol start="4">
@@ -289,12 +320,12 @@
 <div class="countdown-wrapper" data-time="0:01:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:01:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
 <div class="infobox info">
   <strong></strong>
-  <div><p>⚠️ You can do an additional elution to obtain more overall DNA mass. If concentration is crutial, use another reaction tube for the additional elution.</p>
+  <div><p>⚠️ You can do an additional third elution to obtain more overall DNA mass. If concentration is crutial, use another reaction tube for the additional elution.</p>
 <ol>
-<li><input type="checkbox"> Optionally place the column on another reaction tube.</li>
+<li><input type="checkbox"> Optionally, place the column on another reaction tube.</li>
 <li><input type="checkbox"> Add 10-25µL of pre-heated buffer AE (elution buffer) to the column membrane.</li>
-<li><input type="checkbox"> Close the lid and incubate for 5 minutes @ 70 °C.</li>
-<li><input type="checkbox"> Centrifuge @ 50 g (or the lowest force possible) for 60 seconds.</li>
+<li><input type="checkbox"> Close the lid and incubate @ 70 °C for 5 minutes.</li>
+<li><input type="checkbox"> Optionally, Centrifuge @ 50 g (or the lowest force possible) for 60 seconds.</li>
 </ol>
 <div class="countdown-wrapper" data-time="0:01:00" data-sound="/BiochemProtocols/sounds/timer-beep2.mp3"><div class="countdown-row"><div class="countdown-display">0:01:00</div><div class="countdown-bell" data-sound="on">🔔</div></div><button class="countdown-start">Start</button><button class="countdown-reset">Reset</button></div>
 <ol start="5">
@@ -309,7 +340,26 @@
 <ul>
 <li><a href="">Nano Drop DNA concentration determination</a>.</li>
 </ul>
+
 </div>
+<p><div class="local-comment" data-comment-id="/BiochemProtocols/methodes/dna/nucleospin_plasmid_prep/">
+
+  <label><strong>Personal Comments</strong></label><br>
+
+  <textarea rows="4" style="width:100%;"></textarea>
+
+  <div style="margin-top:0.5rem; display:flex; align-items:center; gap:8px;">
+    <button class="lock" title="Toggle lock">🔓</button>
+    <button class="save">Save</button>
+    <span class="status"></span>
+    <button class="delete" style="display:none;">Delete</button>
+  </div>
+</div>
+
+<button id="save-pdf" style="margin-top:2rem;">
+  Save page as PDF
+</button>
+</p>
 
         <div style="text-align: right;">
         <br>
