new content: PBS, PBST, TBS, TBST, SDS-PAGE

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,15 @@ Please note that all information on this site is intended for trained personnel 
     <li>✅ <a href="/BiochemProtocols/methods/dna/pcr/">Polymerase Chain Reaction (PCR) with Fusion Hot Start II DNA Polymerase</a>
       <small>(2025-12-08 15:42)</small>
     </li>
+    <li>✅ <a href="/BiochemProtocols/methods/sds-page_and_western_blotting/sds-page/">SDS-PAGE</a>
+      <small>(2025-12-07 21:00)</small>
+    </li>
+    <li>🚧 <a href="/BiochemProtocols/methods/proteins/bradford_assay/">Bradford Assay</a>
+      <small>(2025-12-07 20:59)</small>
+    </li>
+    <li>🚧 <a href="/BiochemProtocols/methods/proteins/lowry_assay/">Lowry Assay</a>
+      <small>(2025-12-07 20:59)</small>
+    </li>
     <li>✅ <a href="/BiochemProtocols/methods/dna/age/">Agarose Gel Electrophoresis (AGE)</a>
       <small>(2025-12-07 20:56)</small>
     </li>
@@ -114,10 +123,13 @@ Please note that all information on this site is intended for trained personnel 
     <li>✅ <a href="/BiochemProtocols/methods/bacteria/chemically_competent_bacteria/">Chemically Competent Bacteria Generation</a>
       <small>(2025-12-07 13:11)</small>
     </li>
-    <li>🚧 <a href="/BiochemProtocols/methods/bacteria/magstrep_beads_protein_purification/">MagStrep® Strep-Tactin®XT Beads Protein Purification</a>
+    <li>🚧 <a href="/BiochemProtocols/methods/proteins/gluthatione-sepharose_protein_purification/">Gluthatione-Sepharose Protein Purification</a>
       <small>(2025-12-07 13:11)</small>
     </li>
-    <li>✅ <a href="/BiochemProtocols/methods/proteins/streptag_protein_purification/">StrepTag Gravity Flow Protein Purification</a>
+    <li>🚧 <a href="/BiochemProtocols/methods/proteins/magstrep_beads_protein_purification/">MagStrep® Strep-Tactin®XT Beads Protein Purification</a>
+      <small>(2025-12-07 13:11)</small>
+    </li>
+    <li>⭐️ <a href="/BiochemProtocols/methods/proteins/streptag_protein_purification/">StrepTag Gravity Flow Protein Purification</a>
       <small>(2025-12-07 13:11)</small>
     </li>
 </ul>
@@ -141,7 +153,16 @@ Please note that all information on this site is intended for trained personnel 
     <li>✅ <a href="/BiochemProtocols/recipes/bacteria/bacterial_lysis_buffer/">Tris-HCl-NaCl-MgCl2 Bacterial Lysis Buffer</a>
       <small>(2025-12-07 20:25)</small>
     </li>
-    <li>🚧 <a href="/BiochemProtocols/recipes/general_buffers/pbs/">Phosphate-Buffered Saline (PBS)</a>
+    <li>✅ <a href="/BiochemProtocols/recipes/general_buffers/tbst/">Tris-Buffered Saline with Tween20 (TBST)</a>
+      <small>(2025-12-07 20:24)</small>
+    </li>
+    <li>✅ <a href="/BiochemProtocols/recipes/general_buffers/tbs/">Tris-Buffered Saline (TBS)</a>
+      <small>(2025-12-07 20:23)</small>
+    </li>
+    <li>✅ <a href="/BiochemProtocols/recipes/general_buffers/pbst/">Phosphate-Buffered Saline with Tween20 (PBST)</a>
+      <small>(2025-12-07 20:23)</small>
+    </li>
+    <li>✅ <a href="/BiochemProtocols/recipes/general_buffers/pbs/">Phosphate-Buffered Saline (PBS)</a>
       <small>(2025-12-07 20:23)</small>
     </li>
     <li>✅ <a href="/BiochemProtocols/recipes/bacteria/transformation_buffer/">Inoue Transformation Buffer</a>
