--- a/public/methods/bacteria/protein_expression_culture/body.html
+++ b/public/methods/bacteria/protein_expression_culture/body.html
@@ -344,22 +344,28 @@ Isopropyl-β-D-thiogalactopyranosid <em>IPTG</em> to a final concentration of 0.
 </div>
 <h3 id="preparations-1-h-before-harvesting">Preparations 1 h before Harvesting</h3>
 <ol>
-<li><input type="checkbox"> Pre-cool a centrifuge to 4 °C for harvesting @ 3000–6000 g.</li>
-<li><input type="checkbox"> Pre-cool the ultrasonicator to 4 °C.</li>
-<li><input type="checkbox"> Prepare 20 mL supplemented bacterial lysis buffer per 500 mL bacterial culture volume (stable for approximately 2 h):</li>
-</ol>
+<li>
+<p><input type="checkbox"> Pre-cool a centrifuge to 4 °C for harvesting @ 3000–6000 g.</p>
+</li>
+<li>
+<p><input type="checkbox"> Pre-cool the ultrasonicator to 4 °C.</p>
+</li>
+<li>
+<p><input type="checkbox"> Prepare 20 mL supplemented bacterial lysis buffer per 500 mL bacterial culture volume (stable for approximately 2 h):</p>
 <ul>
-<li>pre-cool 20 mL of ice-cold Tris-HCl-NaCl-MgCl2 bacterial lysis buffer</li>
-<li>discard 540 µL</li>
-<li>supplement 20 µL aprotinin 1.54 mM for a final concentration of 1.54 µM</li>
-<li>supplement 20 µL leupeptin 10 mM for a final concentration of 10 µM</li>
-<li>supplement 200 µL pepstatin A 1 mM for a final concentration of 10 µM</li>
-<li>supplement 200 µL PMSF 100 mM for a final concentration of 1 mM</li>
-<li>supplement 3.423 g sucrose for a final concentration of 500mM (17.1 %)</li>
-<li>supplement 100 µL Triton-X-100 for a final concentration of 0.5 %</li>
+<li><input type="checkbox"> pre-cool 20 mL of ice-cold Tris-HCl-NaCl-MgCl2 bacterial lysis buffer</li>
+<li><input type="checkbox"> discard 540 µL</li>
+<li><input type="checkbox"> supplement 20 µL aprotinin 1.54 mM for a final concentration of 1.54 µM</li>
+<li><input type="checkbox"> supplement 20 µL leupeptin 10 mM for a final concentration of 10 µM</li>
+<li><input type="checkbox"> supplement 200 µL pepstatin A 1 mM for a final concentration of 10 µM</li>
+<li><input type="checkbox"> supplement 200 µL PMSF 100 mM for a final concentration of 1 mM</li>
+<li><input type="checkbox"> supplement 3.423 g sucrose for a final concentration of 500mM (17.1 %)</li>
+<li><input type="checkbox"> supplement 100 µL Triton-X-100 for a final concentration of 0.5 %</li>
 </ul>
-<ol start="4">
-<li><input type="checkbox"> Rotate supplemented bacterial lysis buffer end-over-end @ 4 °C for 5–10 minutes.</li>
+</li>
+<li>
+<p><input type="checkbox"> Rotate supplemented bacterial lysis buffer end-over-end @ 4 °C for 5–10 minutes.</p>
+</li>
 </ol>
 <!-- markdownlint-disable MD033 -->
 <div style="display:flex; gap:20px; align-items:center;">
