--- a/public/methods/proteins/streptag_protein_purification/index.html
+++ b/public/methods/proteins/streptag_protein_purification/index.html
@@ -228,6 +228,12 @@
 <ol>
 <li><input type="checkbox"> Place the column onto a stand in the cool room @ 2-8 °C.</li>
 <li><input type="checkbox"> Remove the top cap.</li>
+</ol>
+<div class="infobox info">
+  <strong></strong>
+  <div>⚠️ Keep the top cap for resealing and reuse.</div>
+</div>
+<ol start="3">
 <li><input type="checkbox"> Twist of bottom cap.</li>
 <li><input type="checkbox"> Let the storage buffer flow through.</li>
 <li><input type="checkbox"> Equilibrate the column with 1 column bed volume (200 µL) of wash buffer (or buffer W).</li>
@@ -244,19 +250,23 @@
 </ol>
 <h3 id="first-elution">First Elution</h3>
 <ol>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
 </ol>
+<div class="infobox info">
+  <strong>EDTA</strong>
+  <div>⚠️ Use buffer without EDTA when metalloproteins are purified or when metal ion activated enzymes are purified and function is to be kept.</div>
+</div>
 <h3 id="first-storage">First Storage</h3>
 <ol>
 <li><input type="checkbox"> Add 500 µL glycerol 85 % (approximately 615 mg) to a sterile 1.5 mL reaction tube.</li>
 </ol>
 <div class="infobox info">
   <strong></strong>
-  <div>⚠️ Pipetting highly viscous glycerol can be challenging and may lead to inaccurate measurements. Weighing is often a more reliable alternative.</div>
+  <div>⚠️ Pipetting highly viscous glycerol can be challenging and may lead to inaccurate measurements. Micropipettes with cut of pipette tips can make pipetting easier. Weighing is often a more reliable alternative.</div>
 </div>
 <ol start="2">
 <li><input type="checkbox"> After the final elution add the eluate to the prepared glycerol for a final concentration of 38.6 % (4.93 M).</li>
@@ -285,24 +295,28 @@
 </ol>
 <h3 id="second-elution">Second Elution</h3>
 <ol>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
-<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of elution buffer (or Buffer BXT). <!-- ues elution butter lacking EDTA --></li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
+<li><input type="checkbox"> Elute the protein by applying 0.5 CV (100 µL) of EDTA free elution buffer (or Buffer BXT).</li>
 </ol>
+<div class="infobox info">
+  <strong>EDTA</strong>
+  <div>⚠️ Use buffer without EDTA when metalloproteins are purified or when metal ion activated enzymes are purified and function is to be kept.</div>
+</div>
 <h3 id="second-storage">Second Storage</h3>
 <ol>
 <li><input type="checkbox"> Add 500 µL glycerol 85 % (approximately 615 mg) to a sterile 1.5 mL reaction tube.</li>
 </ol>
 <div class="infobox info">
   <strong></strong>
-  <div>⚠️ Pipetting highly viscous glycerol can be challenging and may lead to inaccurate measurements. Weighing is often a more reliable alternative.</div>
+  <div>⚠️ Pipetting highly viscous glycerol can be challenging and may lead to inaccurate measurements. Micropipettes with cut of pipette tips can make pipetting easier. Weighing is often a more reliable alternative.</div>
 </div>
 <ol start="2">
 <li><input type="checkbox"> After the final elution add the eluate to the prepared glycerol for a final concentration of 38.6 % (4.93 M).</li>
-<li><input type="checkbox"> Take a 6 µL aliquot and mix with 2 µL dsH2O and 10 µL of 2x Laemmli sample buffer and freeze @ -20 °C for later SDS-PAGE analysis.</li>
-<li><input type="checkbox"> Optionally aliquot the rest in 50–100 µL fractions.</li>
+<li><input type="checkbox"> Take a 8 µL aliquot and mix with 10 µL of 2x Laemmli sample buffer and freeze @ -20 °C for later SDS-PAGE analysis.</li>
+<li><input type="checkbox"> Optionally, aliquot the rest in 50–100 µL fractions.</li>
 <li><input type="checkbox"> Store @ –20 °C for middle term storage or –80 °C for long term storage.</li>
 </ol>
 <h3 id="column-storage">Column storage</h3>
@@ -311,7 +325,7 @@
 <li><input type="checkbox"> Close column with top lid.</li>
 <li><input type="checkbox"> Close column with bottom cap.</li>
 </ol>
-<h3 id="procede-with-suitable-protocol">Procede with Suitable Protocol</h3>
+<h3 id="precede-with-suitable-protocol">Precede with Suitable Protocol</h3>
 <ul>
 <li></li>
 </ul>
