--- a/public/recipes/general_buffers/tbs/body.html
+++ b/public/recipes/general_buffers/tbs/body.html
@@ -14,28 +14,16 @@
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">disodium hydrogen phosphate <em>Na<sub>2</sub>HPO<sub>4</sub></em> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
-          <td style="text-align: left">141.96 g/mol</td>
+          <td style="text-align: left">tris base <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
+          <td style="text-align: left">121.14 g/mol</td>
           <td style="text-align: left">solid</td>
-          <td style="text-align: left"><span class="chemical_location" data-chemical="na2hpo4_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
-      </tr>
-      <tr>
-          <td style="text-align: left">potassium dihydrogen phosphate <em>KH<sub>2</sub>PO<sub>4</sub></em> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
-          <td style="text-align: left">136.09 g/mol</td>
-          <td style="text-align: left">solid</td>
-          <td style="text-align: left"><span class="chemical_location" data-chemical="kh2po4_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
+          <td style="text-align: left"><span class="chemical_location" data-chemical="tris_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
       </tr>
       <tr>
           <td style="text-align: left">sodium chloride <em>NaCl</em> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
           <td style="text-align: left">58.44 g/mol</td>
           <td style="text-align: left">solid</td>
           <td style="text-align: left"><span class="chemical_location" data-chemical="nacl_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Potassium chloride <em>KCl</em> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
-          <td style="text-align: left">74.55 g/mol</td>
-          <td style="text-align: left">solid</td>
-          <td style="text-align: left"><span class="chemical_location" data-chemical="kcl_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
       </tr>
       <tr>
           <td style="text-align: left">hydrogen chloride <em>HCl</em> 3.47 mM (25 %)</td>
@@ -93,32 +81,20 @@
   <tbody>
       <tr>
           <td style="text-align: left"><input type="checkbox"></td>
-          <td style="text-align: left">Na<sub>2</sub>HPO<sub>4</sub></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="1.44">1.44 g</span></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="10.1">10.1 mM</span></td>
-      </tr>
-      <tr>
-          <td style="text-align: left"><input type="checkbox"></td>
-          <td style="text-align: left">KH<sub>2</sub>PO<sub>4</sub></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="0.24">0.24 g</span></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="2">2 mM</span></td>
+          <td style="text-align: left">tris</td>
+          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="2.4">2.4 g</span></td>
+          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="19.8">19.8 mM</span></td>
       </tr>
       <tr>
           <td style="text-align: left"><input type="checkbox"></td>
           <td style="text-align: left">NaCl</td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="8">8 g</span></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="137">137 mM</span></td>
-      </tr>
-      <tr>
-          <td style="text-align: left"><input type="checkbox"></td>
-          <td style="text-align: left">KCl</td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="0.2">0.2 g</span></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="2.68">2.68 mM</span></td>
+          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="8.8">8.8 g</span></td>
+          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="150">150 mM</span></td>
       </tr>
       <tr>
           <td style="text-align: left"><input type="checkbox"></td>
           <td style="text-align: left">HCl</td>
-          <td style="text-align: left">ph to 7.0-7.4</td>
+          <td style="text-align: left">ph to 7.5</td>
           <td style="text-align: left"></td>
       </tr>
       <tr>
@@ -144,7 +120,7 @@
   <tbody>
       <tr>
           <td style="text-align: left">Western Blotting</td>
-          <td style="text-align: left">membrane washing as <a href="/BiochemProtocols/recipes/general_buffers/pbs/">PBS</a> or <a href="/BiochemProtocols/recipes/general_buffers/pbst/">PBST</a></td>
+          <td style="text-align: left">membrane washing as <a href="/BiochemProtocols/recipes/general_buffers/tbs/">TBS</a> or <a href="/BiochemProtocols/recipes/general_buffers/tbst/">TBST</a></td>
       </tr>
   </tbody>
 </table>
@@ -180,7 +156,7 @@
 </table>
 
 </div>
-<p><div class="local-comment" data-comment-id="/BiochemProtocols/recipes/general_buffers/pbs/">
+<p><div class="local-comment" data-comment-id="/BiochemProtocols/recipes/general_buffers/tbs/">
 
   <label><strong>Personal Comments</strong></label><br>
 
@@ -207,7 +183,7 @@
       <div class="line company"><b>Murphy Biochemistry</b></div>
       <div class="line website"><b>BiochemProtocols</b></div>
       <br>
-      <div class="line title">Phosphate-Buffered Saline (PBS)</div>
+      <div class="line title">Tris-Buffered Saline (TBS)</div>
       <br>
       <div class="line date" id="label-date"></div>
       <div class="line version">Version 1.0.0</div>
@@ -247,9 +223,9 @@
 
 <script>
   window.labelPrintData = {
-    title: "\"Phosphate-Buffered Saline (PBS)\"",
+    title: "\"Tris-Buffered Saline (TBS)\"",
     version: "\"Version 1.0.0\"",
-    url: "\"https://spikemurphy.github.io/BiochemProtocols/recipes/general_buffers/pbs/\""
+    url: "\"https://spikemurphy.github.io/BiochemProtocols/recipes/general_buffers/tbs/\""
   };
 </script>
 
