--- a/public/recipes/general_buffers/pbst/index.html
+++ b/public/recipes/general_buffers/pbst/index.html
@@ -57,7 +57,7 @@
 </nav>
 
     <header>
-    <h1>Phosphate-Buffered Saline (PBS)</h1>
+    <h1>Phosphate-Buffered Saline with Tween20 (PBST)</h1>
 
     
 
@@ -89,40 +89,22 @@
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">disodium hydrogen phosphate <em>Na<sub>2</sub>HPO<sub>4</sub></em> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
-          <td style="text-align: left">141.96 g/mol</td>
-          <td style="text-align: left">solid</td>
-          <td style="text-align: left"><span class="chemical_location" data-chemical="na2hpo4_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
-      </tr>
-      <tr>
-          <td style="text-align: left">potassium dihydrogen phosphate <em>KH<sub>2</sub>PO<sub>4</sub></em> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
-          <td style="text-align: left">136.09 g/mol</td>
-          <td style="text-align: left">solid</td>
-          <td style="text-align: left"><span class="chemical_location" data-chemical="kh2po4_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
-      </tr>
-      <tr>
-          <td style="text-align: left">sodium chloride <em>NaCl</em> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
-          <td style="text-align: left">58.44 g/mol</td>
-          <td style="text-align: left">solid</td>
-          <td style="text-align: left"><span class="chemical_location" data-chemical="nacl_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Potassium chloride <em>KCl</em> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
-          <td style="text-align: left">74.55 g/mol</td>
-          <td style="text-align: left">solid</td>
-          <td style="text-align: left"><span class="chemical_location" data-chemical="kcl_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
-      </tr>
-      <tr>
-          <td style="text-align: left">hydrogen chloride <em>HCl</em> 3.47 mM (25 %)</td>
-          <td style="text-align: left">36.46 g/mol</td>
+          <td style="text-align: left">phosphate buffered saline <em>PBS</em> 10x</td>
+          <td style="text-align: left"></td>
           <td style="text-align: left">stock solution</td>
-          <td style="text-align: left"><span class="chemical_location" data-chemical="hcl_25%"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
+          <td style="text-align: left"><span class="chemical_location" data-chemical="tbs_10x"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
       </tr>
       <tr>
           <td style="text-align: left">deionized sterilized Water <em>dsH<sub>2</sub>O</em></td>
           <td style="text-align: left">18.015 g/mol</td>
           <td style="text-align: left">solvent</td>
           <td style="text-align: left"></td>
+      </tr>
+      <tr>
+          <td style="text-align: left">Tween20</td>
+          <td style="text-align: left">1228 g/mol</td>
+          <td style="text-align: left">liquid</td>
+          <td style="text-align: left"><span class="chemical_location" data-chemical="tween20_liquid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
       </tr>
   </tbody>
 </table>
@@ -131,29 +113,19 @@
 </div>
 <div class="tab">
   <h2 id="recipe">Recipe</h2>
-<div class="calc-recipe-x-controls">
-  <label>
-    Concentration:
-    <select class="calc-factor">
-      <option value="1" selected>1×</option>
-      <option value="2">2×</option>
-      <option value="4">4×</option>
-      <option value="5">5×</option>
-      <option value="10">10×</option>
-    </select>
-  </label>
+<!-- { {< calculators/calc_recipe_x >}} -->
+<div class="calc-recipe-vol-controls">
   <label>
     Final Volume:
     <select class="calc-volume">
+      <option value="2">2 L</option>
+      <option value="1.5">1.5 L</option>
       <option value="1" selected>1 L</option>
       <option value="0.5">0.5 L</option>
       <option value="0.1">0.1 L</option>
-      <option value="0.01">0.01 L</option>
-      <option value="0.005">0.005 L</option>
     </select>
   </label>
 </div>
-<!-- { {< calculators/calc_recipe_vol >}} -->
 <!-- { {< calculators/calc_recipe_mol >}} -->
 <!-- markdownlint-disable MD033 -->
 <table>
@@ -168,38 +140,20 @@
   <tbody>
       <tr>
           <td style="text-align: left"><input type="checkbox"></td>
-          <td style="text-align: left">Na<sub>2</sub>HPO<sub>4</sub></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="1.44">1.44 g</span></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="10.1">10.1 mM</span></td>
-      </tr>
-      <tr>
-          <td style="text-align: left"><input type="checkbox"></td>
-          <td style="text-align: left">KH<sub>2</sub>PO<sub>4</sub></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="0.24">0.24 g</span></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="2">2 mM</span></td>
-      </tr>
-      <tr>
-          <td style="text-align: left"><input type="checkbox"></td>
-          <td style="text-align: left">NaCl</td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="8">8 g</span></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="137">137 mM</span></td>
-      </tr>
-      <tr>
-          <td style="text-align: left"><input type="checkbox"></td>
-          <td style="text-align: left">KCl</td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mass="0.2">0.2 g</span></td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-mol="2.68">2.68 mM</span></td>
-      </tr>
-      <tr>
-          <td style="text-align: left"><input type="checkbox"></td>
-          <td style="text-align: left">HCl</td>
-          <td style="text-align: left">ph to 7.0-7.4</td>
+          <td style="text-align: left">PBS 10x</td>
+          <td style="text-align: left"><span class="calc_recipe_vol" data-default-vol="100">100 mL</span></td>
           <td style="text-align: left"></td>
       </tr>
       <tr>
           <td style="text-align: left"><input type="checkbox"></td>
-          <td style="text-align: left">dsH<sub>2</sub>O</td>
-          <td style="text-align: left"><span class="calc_recipe_x" data-default-vol="1000">1000 mL</span></td>
+          <td style="text-align: left">deionized sterilized Water <em>dsH<sub>2</sub>O</em></td>
+          <td style="text-align: left"><span class="calc_recipe_vol" data-default-vol="899">899 mL</span></td>
+          <td style="text-align: left"></td>
+      </tr>
+      <tr>
+          <td style="text-align: left"><input type="checkbox"></td>
+          <td style="text-align: left">Tween 20</td>
+          <td style="text-align: left"><span class="calc_recipe_vol" data-default-vol="1">1 mL</span></td>
           <td style="text-align: left"></td>
       </tr>
   </tbody>
@@ -219,7 +173,7 @@
   <tbody>
       <tr>
           <td style="text-align: left">Western Blotting</td>
-          <td style="text-align: left">membrane washing as <a href="/BiochemProtocols/recipes/general_buffers/pbs/">PBS</a> or <a href="/BiochemProtocols/recipes/general_buffers/pbst/">PBST</a></td>
+          <td style="text-align: left">membrane washing</td>
       </tr>
   </tbody>
 </table>
@@ -255,7 +209,7 @@
 </table>
 
 </div>
-<p><div class="local-comment" data-comment-id="/BiochemProtocols/recipes/general_buffers/pbs/">
+<p><div class="local-comment" data-comment-id="/BiochemProtocols/recipes/general_buffers/pbst/">
 
   <label><strong>Personal Comments</strong></label><br>
 
@@ -282,7 +236,7 @@
       <div class="line company"><b>Murphy Biochemistry</b></div>
       <div class="line website"><b>BiochemProtocols</b></div>
       <br>
-      <div class="line title">Phosphate-Buffered Saline (PBS)</div>
+      <div class="line title">Phosphate-Buffered Saline with Tween20 (PBST)</div>
       <br>
       <div class="line date" id="label-date"></div>
       <div class="line version">Version 1.0.0</div>
@@ -322,9 +276,9 @@
 
 <script>
   window.labelPrintData = {
-    title: "\"Phosphate-Buffered Saline (PBS)\"",
+    title: "\"Phosphate-Buffered Saline with Tween20 (PBST)\"",
     version: "\"Version 1.0.0\"",
-    url: "\"https://spikemurphy.github.io/BiochemProtocols/recipes/general_buffers/pbs/\""
+    url: "\"https://spikemurphy.github.io/BiochemProtocols/recipes/general_buffers/pbst/\""
   };
 </script>
 
