new content: how to use BiocheSheets

--- a/public/biochemsheets/chemicals/body.html
+++ b/public/biochemsheets/chemicals/body.html
@@ -340,42 +340,54 @@
 
 </section>
 
-<div class="how-to-use">
+<section class="how_to_use_wrapper">
 
-  <div class="how-to-use-step">Receive the chemical from the manufacturer</div>
-  <div class="how-to-use-arrow">→</div>
+  <h3 class="how_to_use_heading">
+    How to use BiochemSheets with Recipes and Protocols
+    <span>from delivery to documented experiment</span>
+  </h3>
 
-  <div class="how-to-use-step">
-    Look up storage and safety information in <strong>BiochemSheets</strong>
+  <div class="how_to_use">
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Receive the chemical from the manufacturer.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Look up storage and safety information in BiochemSheets.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Follow the linked preparation recipe.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Prepare aliquots and apply documented storage conditions.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Continue with the appropriate linked protocol.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Perform the experiment.
+    </div>
+
+    <div class="how_to_use_step how_to_use_final">
+      <span class="how_to_use_marker"></span>
+      Congratulations: <br>
+      You maintain accurate and repeatable laboratory documentation in accordance with
+      good scientific practice.
+    </div>
+
   </div>
-  <div class="how-to-use-arrow">→</div>
-
-  <div class="how-to-use-step">Follow the linked preparation recipe</div>
-  <div class="how-to-use-arrow">→</div>
-
-  <div class="how-to-use-step">
-    Prepare aliquots and apply the documented storage conditions
-  </div>
-  <div class="how-to-use-arrow">→</div>
-
-  <div class="how-to-use-step">Continue via links to the appropriate SOP</div>
-  <div class="how-to-use-arrow">→</div>
-
-  <div class="how-to-use-step">Perform the experiment</div>
-  <div class="how-to-use-arrow">→</div>
-
-  <div class="how-to-use-step">
-    Export pages as PDF or download labels and archive them in your lab notebook,
-    including documented deviations
-  </div>
-  <div class="how-to-use-arrow">→</div>
-
-  <div class="how-to-use-step how-to-use-final">
-    Maintain accurate and repeatable laboratory documentation in accordance with
-    good scientific practice
-  </div>
-
-</div>
+</section>
 
 
 
