--- a/public/index.html
+++ b/public/index.html
@@ -209,6 +209,55 @@
 
 </section>
 
+<section class="how_to_use_wrapper">
+
+  <h3 class="how_to_use_heading">
+    How to use BiochemSheets with Recipes and Protocols
+    <span>from delivery to documented experiment</span>
+  </h3>
+
+  <div class="how_to_use">
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Receive the chemical from the manufacturer.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Look up storage and safety information in BiochemSheets.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Follow the linked preparation recipe.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Prepare aliquots and apply documented storage conditions.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Continue with the appropriate linked protocol.
+    </div>
+
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Perform the experiment.
+    </div>
+
+    <div class="how_to_use_step how_to_use_final">
+      <span class="how_to_use_marker"></span>
+      Congratulations: <br>
+      You maintain accurate and repeatable laboratory documentation in accordance with
+      good scientific practice.
+    </div>
+
+  </div>
+</section>
+
 
 
 <div class="infobox info">
