--- a/public/biochemsheets/chemicals/salts/inorganic_salts/chem_nacl/body.html
+++ b/public/biochemsheets/chemicals/salts/inorganic_salts/chem_nacl/body.html
@@ -236,6 +236,9 @@
 <dt>Gloves</dt> 
 <dd>not required</dd>
 
+<dt>Eye protection</dt> 
+<dd>not required</dd>
+
 <dt>Mask</dt> 
 <dd>not required</dd>
 
