--- a/public/index.html
+++ b/public/index.html
@@ -255,6 +255,11 @@
       good scientific practice.
     </div>
 
+    <div class="how_to_use_step">
+      <span class="how_to_use_marker"></span>
+      Upcomming feature: Log experiment results directly into the integrated ELN.
+    </div>
+
   </div>
 </section>
 
