--- a/public/recipes/general_buffers/pbs/index.html
+++ b/public/recipes/general_buffers/pbs/index.html
@@ -199,7 +199,7 @@
           <td style="text-align: left"><span class="chemical_location" data-chemical="kh2po4_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
       </tr>
       <tr>
-          <td style="text-align: left"><a href="">sodium chloride <em>NaCl</em></a> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
+          <td style="text-align: left"><a href="/BiochemProtocols/biochemsheets/chemicals/salts/inorganic_salts/chem_nacl/">sodium chloride <em>NaCl</em></a> <a href="https://www.carlroth.com/.../"><sup>SDS</sup></a></td>
           <td style="text-align: left">58.44 g/mol</td>
           <td style="text-align: left">solid</td>
           <td style="text-align: left"><span class="chemical_location" data-chemical="nacl_solid"><input type="text" class="location-input" placeholder="Enter location..."/><button class="save-btn" aria-label="Save location" disabled>💾</button></span><script src="/BiochemProtocols/js/chemical_location.js"></script></td>
