--- a/public/biochemsheets/chemicals/antibiotics/betalactams/chem_ampicillin/body.html
+++ b/public/biochemsheets/chemicals/antibiotics/betalactams/chem_ampicillin/body.html
@@ -244,6 +244,9 @@
 <dt>Gloves</dt> 
 <dd>nitrile gloves, EN ISO 374-1 type B</dd>
 
+<dt>Eye protection</dt> 
+<dd>not normally required</dd>
+
 <dt>Mask</dt> 
 <dd>not normally required; use dust mask if powder handling generates aerosols</dd>
 
