--- a/public/biochemsheets/chemicals/antibiotics/tetracyclines/chem_aht/index.html
+++ b/public/biochemsheets/chemicals/antibiotics/tetracyclines/chem_aht/index.html
@@ -245,6 +245,9 @@
 <dt>Gloves</dt> 
 <dd>nitrile gloves, EN ISO 374-1 type B</dd>
 
+<dt>Eye protection</dt> 
+<dd>recommended</dd>
+
 <dt>Mask</dt> 
 <dd>not normally required; use dust mask if powder handling generates aerosols</dd>
 
